--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+    background: rgb(210, 176, 0);
+    background: radial-gradient(circle, rgba(210, 176, 0, 0.6558823358444941) 60%, rgba(0, 57, 241, 0.5018207111946341) 70%);
+}
+
 #task-container {
     max-width: 600px;
     margin: 0 auto;
@@ -24,4 +29,16 @@
     border-radius: 0;
     border: 0;
     color: #fff;
+}
+
+.task-wrapper {
+    cursor: pointer;
+    border: solid 1px #e9e9e9;
+    color: #686868;
+    margin: 5px;
+    padding: 20px;
+}
+
+.task-wrapper:hover {
+    background-color: #f0f0f0;
 }
